plugins {
	id 'fabric-loom' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()

	maven { url 'https://maven.shedaniel.me/' }
	maven { url 'https://api.modrinth.com/maven' }
	maven { url 'https://maven.terraformersmc.com/releases/' }
	maven {
		url = 'https://maven.isxander.dev/releases'
		name = 'Xander Maven'
	}
}

loom {
	mods {
		"nodecraft" {
			sourceSet sourceSets.main
		}
	}
}

fabricApi {
	configureDataGeneration {
		client = true
	}
	configureTests {
		createSourceSet = true
		modId = "nodecraft-test"
		enableGameTests = true
		enableClientGameTests = false
		eula = true
	}
}

dependencies {
	// Minecraft & Fabric
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// GUI - ImGui (Maven Central; avoid JitPack for CI stability)
	// ImGuiImplGl3 lives in imgui-java-lwjgl3 on Central (no separate gl3 artifact).
	// Exclude org.lwjgl so we compile/run against Minecraft's LWJGL (3.3.3), not imgui's BOM (3.3.4).
	// Natives must be modImplementation (not only include) so runClient can extract imgui-java64 from the classpath.
	modImplementation "io.github.spair:imgui-java-binding:${project.imgui_version}"
	modImplementation("io.github.spair:imgui-java-lwjgl3:${project.imgui_version}") {
		exclude group: 'org.lwjgl'
	}
	modImplementation "io.github.spair:imgui-java-natives-windows:${project.imgui_version}"
	modImplementation "io.github.spair:imgui-java-natives-linux:${project.imgui_version}"
	modImplementation "io.github.spair:imgui-java-natives-macos:${project.imgui_version}"
	include "io.github.spair:imgui-java-binding:${project.imgui_version}"
	include("io.github.spair:imgui-java-lwjgl3:${project.imgui_version}") {
		exclude group: 'org.lwjgl'
	}
	include "io.github.spair:imgui-java-natives-windows:${project.imgui_version}"
	include "io.github.spair:imgui-java-natives-linux:${project.imgui_version}"
	include "io.github.spair:imgui-java-natives-macos:${project.imgui_version}"

	// Algorithms & math libraries
	implementation "org.locationtech.jts:jts-core:${project.jts_version}"
	implementation "org.joml:joml:${project.joml_version}"
	include "org.joml:joml:${project.joml_version}"
	implementation "org.apache.commons:commons-math3:${project.commons_math_version}"

	// Configuration library
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"

	// SVG rendering for node icons
	implementation "com.github.weisj:jsvg:${project.jsvg_version}"
	include "com.github.weisj:jsvg:${project.jsvg_version}"

	// JSON serialization
	implementation "com.google.code.gson:gson:${project.gson_version}"

	// Tests
	testImplementation "org.junit.jupiter:junit-jupiter:${project.junit_version}"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${project.junit_version}"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:${project.junit_platform_version}"
}

tasks.named('test', Test) {
	useJUnitPlatform()
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
	options.encoding = 'UTF-8'
	options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}" }
	}
}

// Task to run the preset converter
tasks.register('runPresetConverter', JavaExec) {
	group = 'nodecraft'
	description = 'Runs the preset converter tool'
	mainClass = 'com.nodecraft.nodesystem.preset.PresetConverterTool'
	classpath = sourceSets.main.runtimeClasspath
	workingDir = projectDir
}
